--- a/firstwebsite/1st.html
+++ b/firstwebsite/1st.html
@@ -18,7 +18,7 @@
     </td>
     <td>
       <h1>Megha joshi</h1>
-      <p><em>i am a 2 nd b tech kid who done has done</em> <strong><a target="_blank"href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta">mozilla ka link coz i havent done anything</a></strong>nothing in life</p>
+      <p><em>i am a second  BTech kid who done has done</em> <strong><a target="_blank"href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta">mozilla ka link coz i havent done anything</a></strong>nothing in life</p>
     </td>
   </tr>
 </table>
